objects/Monthly_Electric_Bill__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Monthly Electric Bill</relationshipLabel>
        <relationshipName>Monthly_Electric_Bill</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_Savings__c</fullName>
        <label>Bill Savings</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Price_Return_of_Investment__c</fullName>
        <label>Cash Price Return of Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Electric_Bill_Summary__c</fullName>
        <label>Electric Bill Summary</label>
        <referenceTo>Electric_Bill_Summary__c</referenceTo>
        <relationshipLabel>Monthly Electric Bill</relationshipLabel>
        <relationshipName>Monthly_Electric_Bill</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimum Bill</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Month_order__c</fullName>
        <formula>IF(ISPICKVAL( Month__c , &apos;January&apos;), 1, IF(ISPICKVAL( Month__c , &apos;February&apos;), 2, IF(ISPICKVAL( Month__c , &apos;March&apos;), 3,  IF(ISPICKVAL( Month__c , &apos;April&apos;), 4,  IF(ISPICKVAL( Month__c , &apos;May&apos;), 5,  IF(ISPICKVAL( Month__c , &apos;June&apos;), 6,  IF(ISPICKVAL( Month__c , &apos;July&apos;), 7,  IF(ISPICKVAL( Month__c , &apos;August&apos;), 8,  IF(ISPICKVAL( Month__c , &apos;September&apos;), 9,  IF(ISPICKVAL( Month__c , &apos;October&apos;), 10,  IF(ISPICKVAL( Month__c , &apos;November&apos;), 11,  IF(ISPICKVAL( Month__c , &apos;December&apos;), 12,  IF(ISPICKVAL( Month__c , &apos;Minimum Bill&apos;), 13, 13)))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Consumption_After_Solar__c</fullName>
        <formula>monthly_produced__c + monthly_purchased__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Consumption After Solar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Solar_Production__c</fullName>
        <description>Holds the value for the Lease and Cash Contracts - Solar Production chart [Case 00328434 - Excess Production on Proposal Not Shown]</description>
        <formula>monthly_produced__c + monthly_excess__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Solar Production</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage_Electricity_Produced__c</fullName>
        <label>Percentage Electricity Produced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Monthly Electric Bill</relationshipLabel>
        <relationshipName>Monthly_Electric_Bill</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>With_PV_System__c</fullName>
        <label>With PV System</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Without_PV_System__c</fullName>
        <label>Without PV System</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>monthly_excess__c</fullName>
        <label>monthly excess</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>monthly_produced__c</fullName>
        <label>monthly produced</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>monthly_purchased__c</fullName>
        <label>monthly purchased</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Monthly Electric Bill</label>
    <nameField>
        <label>Monthly Electric Bill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Electric Bill</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>